--- a/timesheet/src/main/webapp/WEB-INF/classes/META-INF/maven/tn.esprit.spring/timesheet/pom.xml
+++ b/timesheet/src/main/webapp/WEB-INF/classes/META-INF/maven/tn.esprit.spring/timesheet/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>tn.esprit.spring</groupId>
 	<artifactId>timesheet</artifactId>
-	<version>0.0.5-SNAPSHOT</version>
+	<version>1.0</version>
 	<name>timesheet</name>
 	<description>timesheet</description>
 
@@ -40,15 +40,8 @@
 		<dependency>
 		    <groupId>junit</groupId>
 		    <artifactId>junit</artifactId>
-		    <version>4.13</version><!--$NO-MVN-MAN-VER$-->
+		    <version>4.13</version>
 		    <scope>test</scope>
-		</dependency>
-		
-		<dependency>
-	    <groupId>org.projectlombok</groupId>
-	    <artifactId>lombok</artifactId>
-	    <version>1.18.22</version><!--$NO-MVN-MAN-VER$-->
-	    <scope>provided</scope>
 		</dependency>
 
 		<dependency>
@@ -103,7 +96,11 @@
 			<artifactId>primefaces</artifactId>
 			<version>6.1</version>
 		</dependency>
-	
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.16.16</version>
+		</dependency>
 		
 		<dependency>
 		    <groupId>log4j</groupId>
@@ -137,37 +134,37 @@
       </plugin>
        <plugin>
           <artifactId>maven-clean-plugin</artifactId>
-          <version>3.1.0</version><!--$NO-MVN-MAN-VER$-->
+          <version>3.1.0</version>
         </plugin>
         <!-- default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
         <plugin>
           <artifactId>maven-resources-plugin</artifactId>
-          <version>3.0.2</version><!--$NO-MVN-MAN-VER$-->
+          <version>3.0.2</version>
         </plugin>
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.8.0</version><!--$NO-MVN-MAN-VER$-->
+          <version>3.8.0</version>
         </plugin>
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.22.1</version><!--$NO-MVN-MAN-VER$-->
+          <version>2.22.1</version>
         </plugin>
         <plugin>
           <artifactId>maven-jar-plugin</artifactId>
-          <version>3.0.2</version><!--$NO-MVN-MAN-VER$-->
+          <version>3.0.2</version>
         </plugin>
         <plugin>
           <artifactId>maven-install-plugin</artifactId>
-          <version>2.5.2</version><!--$NO-MVN-MAN-VER$-->
+          <version>2.5.2</version>
         </plugin>
         <plugin>
           <artifactId>maven-deploy-plugin</artifactId>
-          <version>2.8.2</version><!--$NO-MVN-MAN-VER$-->
+          <version>2.8.2</version>
         </plugin>
         <!-- site lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle -->
         <plugin>
           <artifactId>maven-site-plugin</artifactId>
-          <version>3.7.1</version><!--$NO-MVN-MAN-VER$-->
+          <version>3.7.1</version>
         </plugin>
         <plugin>
           <artifactId>maven-project-info-reports-plugin</artifactId>
@@ -178,11 +175,11 @@
 	</build>
 	<distributionManagement>
     <snapshotRepository>
-      <id>nexus-snapshots</id>
+      <id>maven-snapshots</id>
       <url>http://localhost:8082/repository/maven-snapshots/</url>
     </snapshotRepository>
     <repository>
-      <id>nexus-releases</id>
+      <id>maven-releases</id>
       <url>http://localhost:8082/repository/maven-releases/</url>
     </repository>
   </distributionManagement>
